# operational-transform-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  rust.yml
benches/: benchmark.rs
operational-transform/benches/: benchmark.rs
operational-transform/src/: lib.rs
src/: lib.rs  serde.rs  utilities.rs
xtask/: Cargo.toml
xtask/src/: main.rs
