[package]
name = "operational-transform"
version = "0.1.0"
authors = ["bold <bold@cryptoguru.com>"]
edition = "2018"
license = "MIT"
description = "A library for Operational Transformation"

[dependencies]
serde = { version = "1", default-features = false, optional = true }

[dev-dependencies]
rand = "0.7.3"
serde_json = "1.0.50"
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
